remove clang as system compiler

--- a/gentoo/etc/portage/make.conf
+++ b/gentoo/etc/portage/make.conf
@@ -2,22 +2,17 @@
 # built this stage.
 # Please consult /usr/share/portage/config/make.conf.example for a more
 # detailed example.
-COMMON_FLAGS="-march=native -O2 -pipe"
-#COMMON_FLAGS="-march=native -flto=thin -O2 -pipe" #clang
+COMMON_FLAGS="-flto=16 -march=native -O2 -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 
-#enable these after clang is built with gcc
-#and change the common flags to clang stuff
-#CC="clang"
-#CXX="clang++"
-#AR="llvm-ar"
-#NM="llvm-nm"
-#RANLIB="llvm-ranlib"
-
-#LDFLAGS="-fuse-ld=lld -rtlib=compiler-rt -unwindlib=libunwind -Wl,-O2 -Wl,--as-needed"
+CC="gcc"
+CXX="g++"
+AR="gcc-ar"
+NM="gcc-nm"
+RANLIB="gcc-ranlib"
 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
@@ -27,13 +22,13 @@ PKGDIR="/var/cache/binpkgs"
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
 USE="
-clang default-compiler-rt default-lld llvm-libunwind llvm_targets_AArch64
+clang # BRO ENABLE THESE FLAGS IF YOU'RE BOOTSTRAPPING CLANG: default-compiler-rt default-lld llvm-libunwind llvm_targets_AArch64
 X xorg minimal tools
 nvidia vdpau vaapi
 screencast pipewire pipewire-alsa
 openrc harfbuzz elogind"
-ABI_X86="64"
-#CPU_FLAGS_X86="mmx mmxext sse sse2 sse3" # cpuid2cpuflags
+#ABI_X86="64"
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3" # cpuid2cpuflags
 
 # portage
 MAKEOPTS="-j16"
