--- a/gentoo/etc/portage/make.conf
+++ b/gentoo/etc/portage/make.conf
@@ -22,7 +22,7 @@ PKGDIR="/var/cache/binpkgs"
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
 USE="
-clang # BRO ENABLE THESE FLAGS IF YOU'RE BOOTSTRAPPING CLANG: default-compiler-rt default-lld llvm-libunwind llvm_targets_AArch64
+# clang BRO ENABLE THESE FLAGS IF YOU'RE BOOTSTRAPPING CLANG: default-compiler-rt default-lld llvm-libunwind llvm_targets_AArch64
 X xorg minimal tools
 nvidia vdpau vaapi
 screencast pipewire pipewire-alsa
